# seaforms

./: pyproject.toml
seaforms/: __main__.py
seaforms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_seaforms.py
