[tool.poetry]
name = "seaforms"
version = "0.1.0"
description = ""
authors = ["WithPrecedent <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
seaborn = "^0.10.1"
oauth2client = "^4.1.3"
gspread = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
